# service/account/router/router.go
@@ -49,7 +49,10 @@ func RegisterPayRouter() {
 		POST(helper.GetAppList, api.GetCostAppList).
 		POST(helper.GetAppTypeList, api.GetAppTypeList).
 		POST(helper.GetBasicCostDistribution, api.GetBasicCostDistribution).
-		POST(helper.GetAppCostTimeRange, api.GetAppCostTimeRange)
+		POST(helper.GetAppCostTimeRange, api.GetAppCostTimeRange).
+		POST(helper.GetInvoice, api.GetInvoice).
+		POST(helper.ApplyInvoice, api.ApplyInvoice).
+		POST(helper.SetStatusInvoice, api.SetStatusInvoice)
 	docs.SwaggerInfo.Host = env.GetEnvWithDefault("SWAGGER_HOST", "localhost:2333")
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
 
